--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Marathon Coach</title>
     <link rel="icon" type="image/png" sizes="32x32" href="marathon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="marathon (1).png">
-    <link rel="apple-touch-icon" href="Gemini_Generated_Image_utx4rzutx4rzutx4.png">
+    <link rel="apple-touch-icon" href="logo.png">
     <link rel="manifest" href="/site.webmanifest">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
